# home-env

./: .gitignore  .gitmodules  .sync.json  AGENTS.md  BOOTSTRAP_UI_PLAN.md  BootstrapAdmin.ps1  BootstrapAdmin1.ps1  BootstrapAdmin2.ps1  BootstrapAdminManual.ps1  CLAUDE.md  Cargo.toml  DETAILS.md  IDEAS.md  README.md  REFERENCES.md  TODO.md  bootstrap-wsl.sh  copy-bootstrap.sh  install
.claude/: settings.json  settings.local.json
LibreChat-overrides/: .env  (+1 more)
admin/: README.md  TODO  (+5 more)
home-env-bootstrap/: .gitignore  Cargo.toml  README.md  check-all.sh  fix-all.sh  install-hooks.sh  rust-toolchain.toml
home-env-bootstrap/src/: main.rs  platform.rs  task_registry.rs
home-env-bootstrap/src/gui/: app.rs  config_panel.rs  log_panel.rs  mod.rs  task_panel.rs
home-env-bootstrap/src/linux_tasks/: bash.rs  mod.rs
home-env-bootstrap/src/resources/: act.sh  android.sh  attach_dev_drive.ps1  auto_attach_dev_drive.ps1  backup.sh  bluetooth.sh  claude.sh  colors.sh  docker.sh  dotfiles-service.sh  dotfiles.sh  espeak.sh  extra.sh  fish.sh  gemini.sh  gnome.sh  install-git-hooks.sh  install-mcp-hooks.sh  intellij.sh  k3s.sh  metamcp.sh  mount-z-drive.sh  node.sh  openai-codex.sh  python.sh  rust.sh  secrets.sh  steam.sh  sync.sh  vlc.sh  vscode.sh  warp.sh  wine.sh
home-env-bootstrap/src/utility/: config.rs  logging.rs  mod.rs  task.rs  task_status.rs
home-env-bootstrap/src/windows_tasks/: caddy_startup.rs  create_dev_drive.rs  install_ai_shell.rs  install_bun.rs  install_claude_code.rs  install_powershell7.rs  install_rust.rs  mod.rs  port_forwarding.rs  scheduled_task.rs
(+297 files in other folders)
