[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.4"
bytes = "1.6.0"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6.2"
const-str = "0.5.7"
dirs = "5.0.1"
eframe = "0.24"
egui = "0.24"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }

[build-dependencies]
embed-resource = "2.4"

[profile.release]
debug = 0

[profile.dev]
debug = 0
